# compressed_bits

./: .clang-format  .clang-tidy  .gdb_history  .gitignore  Makefile  peda-session-52417.txt  peda-session-52748.txt  peda-session-53067.txt  peda-session-53216.txt  peda-session-55255.txt  peda-session-55980.txt  peda-session-57489.txt  peda-session-57657.txt  peda-session-58155.txt  peda-session-59140.txt  peda-session-test_delta.txt  peda-session-unknown.txt  test_delta_stats.txt
src/: CMakeLists.txt
src/bits_count/: Makefile  bits_count.cpp  bits_count.h  bits_count_main.cpp
src/bits_test/: Makefile  bits_test_main.cpp
src/test/bits_test/: bits_test.cpp  bits_test_main.cpp
src/test/data/: Bfiles.txt  GSM1218850_MB135DMMD.peak.q100.bed  GSM1218850_MB135DMMD.peak.txt  HSMM_Skeletal_Muscle_Myoblasts_Active_TSS.bed  HSMM_Skeletal_Muscle_Myoblasts_Bivalent_Enhancer.bed  HSMM_Skeletal_Muscle_Myoblasts_Flanking_Active_TSS.bed  HSMM_Skeletal_Muscle_Myoblasts_Flanking_Bivalent_TSS_Enh.bed  HSMM_Skeletal_Muscle_Myoblasts_Strong_transcription.bed  HSMM_Skeletal_Muscle_Myoblasts_Weak_Repressed_PolyComb.bed  HSMMtube_Skeletal_Muscle_Myotubes_Derived_from_HSMM_Active_TSS.bed  HSMMtube_Skeletal_Muscle_Myotubes_Derived_from_HSMM_Bivalent_Enhancer.bed  HSMMtube_Skeletal_Muscle_Myotubes_Derived_from_HSMM_Flanking_Active_TSS.bed  HSMMtube_Skeletal_Muscle_Myotubes_Derived_from_HSMM_Genic_enhancers.bed  HSMMtube_Skeletal_Muscle_Myotubes_Derived_from_HSMM_Heterochromatin.bed  HSMMtube_Skeletal_Muscle_Myotubes_Derived_from_HSMM_Quiescent_Low.bed  HSMMtube_Skeletal_Muscle_Myotubes_Derived_from_HSMM_Strong_transcription.bed  HSMMtube_Skeletal_Muscle_Myotubes_Derived_from_HSMM_Weak_transcription.bed  HSMMtube_Skeletal_Muscle_Myotubes_Derived_from_HSMM_ZNF_genes_and_repeats.bed  peda-session-10516.txt  peda-session-11002.txt  peda-session-unknown.txt
src/test/unit/: CMakeLists.txt  peda-session-149227.txt  test_bits_count.cpp  test_metaarray.cpp  test_s4fastpfor.cpp
src/utils/: CMakeLists.txt
src/utils/MSIMD/: CMakeLists.txt  msimd.h
src/utils/MSIMD/delta/: CMakeLists.txt  delta.cpp  delta.h
src/utils/MSIMD/metaArray/: CMakeLists.txt  MetaArray.cpp  MetaArray.h
src/utils/MSIMD/s4-fastpfor/: CMakeLists.txt  s4-fastpfor.cpp  s4-fastpfor.h
src/utils/bedFile/: CMakeLists.txt  bedFile.h
src/utils/bits/: CMakeLists.txt
src/utils/bits/binary_search/lib/seq/: CMakeLists.txt  Makefile
src/utils/bits/interval_intersection/lib/seq/: CMakeLists.txt  Makefile  interval.c  interval.h
src/utils/bits/utils/c/: CMakeLists.txt
src/utils/bits/utils/c/file_read/: Makefile  file_read.cpp  file_read.h
src/utils/bits/utils/c/mt/: CMakeLists.txt  Makefile  mt.h  mt_test.c
src/utils/bits/utils/c/timer/: CMakeLists.txt  Makefile  timer.h
src/utils/delta/: Makefile  delta.cpp  delta.h  peda-session-142591.txt  test_delta_stats.txt
src/utils/deltas/: MakeFile  delta.cpp  delta.h
src/utils/fileType/: CMakeLists.txt
src/utils/file_read/: CMakeLists.txt  file_read.cpp
src/utils/genomeFile/: .Makefile.swp  CMakeLists.txt
src/utils/gzstream/: CMakeLists.txt  gzstream.h
src/utils/lineFileUtilities/: CMakeLists.txt
src/utils/varint/: Makefile  varint.c  varint.h
src/utils/version/: CMakeLists.txt  version.h
test/data/: Bfiles.txt  HSMM_Skeletal_Muscle_Myoblasts_Bivalent_Poised_TSS.bed  HSMM_Skeletal_Muscle_Myoblasts_Enhancers.bed  HSMM_Skeletal_Muscle_Myoblasts_Genic_enhancers.bed  HSMM_Skeletal_Muscle_Myoblasts_Heterochromatin.bed  HSMM_Skeletal_Muscle_Myoblasts_Quiescent_Low.bed  HSMM_Skeletal_Muscle_Myoblasts_Repressed_PolyComb.bed  HSMM_Skeletal_Muscle_Myoblasts_Transcr_at_gene_5_and_3.bed  HSMM_Skeletal_Muscle_Myoblasts_Weak_transcription.bed  HSMM_Skeletal_Muscle_Myoblasts_ZNF_genes_and_repeats.bed  HSMMtube_Skeletal_Muscle_Myotubes_Derived_from_HSMM_Bivalent_Poised_TSS.bed  HSMMtube_Skeletal_Muscle_Myotubes_Derived_from_HSMM_Enhancers.bed  HSMMtube_Skeletal_Muscle_Myotubes_Derived_from_HSMM_Flanking_Bivalent_TSS_Enh.bed  HSMMtube_Skeletal_Muscle_Myotubes_Derived_from_HSMM_Repressed_PolyComb.bed  HSMMtube_Skeletal_Muscle_Myotubes_Derived_from_HSMM_Transcr_at_gene_5_and_3.bed  HSMMtube_Skeletal_Muscle_Myotubes_Derived_from_HSMM_Weak_Repressed_PolyComb.bed
test/random/: a.out  flags_test.cpp  simd_test.cpp
test/unit/: Makefile  peda-session-11638.txt  peda-session-12113.txt  peda-session-142408.txt  peda-session-9885.txt  peda-session-unknown.txt  test_delta_stats.txt  test_deltas.cpp
